--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
       justify-content: center;
       height: 100vh;
     }
-
+    header li{
+      display: inline;
+      margin-right: 20px;
+    }
+    header a:hover {
+      text-decoration: underline;
+    }
     .container {
       display: flex;
       flex-direction: row;
@@ -78,6 +84,13 @@
   <div class="container">
     <div class="image-section"></div>
     <div class="content-section">
+        <ul>
+            <li><a href='#'>校園</a></li>
+            <li><a href='#'>修課</a></li>
+            <li><a href='#'>隨筆</a></li>
+            <li><a href='#'>Projects</a></li>
+            <li><a href='#'>Vlog</a></li>
+        </ul>
       <h1>Your Name</h1>
       <p>Hi! I'm Hazel. Welcome to my personal site. Here you’ll find my projects, blog, and more.</p>
       <a href="about.html">Learn more →</a>
