--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     <div class="image-section"></div>
     <div class="content-section">
         <ul>
-            <li><a href='#'>校園</a></li>
-            <li><a href='#'>修課</a></li>
-            <li><a href='#'>隨筆</a></li>
-            <li><a href='#'>Projects</a></li>
-            <li><a href='#'>Vlog</a></li>
+            <li><a href='campus.md'>校園</a></li>
+            <li><a href='courses.markdown'>修課</a></li>
+            <li><a href='ramble.md'>隨筆</a></li>
+            <li><a href='project.markdown'>Projects</a></li>
+            <li><a href='vlog.md'>Vlog</a></li>
         </ul>
       <h1>Your Name</h1>
       <p>Hi! I'm Hazel. Welcome to my personal site. Here you’ll find my projects, blog, and more.</p>
