--- a/_sites/about.html
+++ b/_sites/about.html
@@ -34,7 +34,7 @@
 
     .image-section {
       flex: 1;
-      background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
+      background: url('https://github.com/Hazel-1212/Hazel-the-Cat/blob/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
       min-height: 300px;
     }
 
