--- a/_sites/index.html
+++ b/_sites/index.html
@@ -20,7 +20,38 @@
       justify-content: center;
       height: 100vh;
     }
+    header li{
+      display: inline;
+      margin-right: 20px;
+    }
+     nav {
+      background-color: #ffffff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px 20px;
+    }
 
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      padding: 0;
+      margin: 0;
+    }
+
+    nav li {
+      display: inline;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #0077cc;
+    }
+    
     .container {
       display: flex;
       flex-direction: row;
@@ -34,8 +65,9 @@
 
     .image-section {
       flex: 1;
-      background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
-      min-height: 300px;
+      background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/index.png') no-repeat center center/cover;
+      min-height: 200px;
+      min-width: 600px;
     }
 
     .content-section {
@@ -75,17 +107,22 @@
   </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="_site/campus.html">校園</a></li>
+      <li><a href="_site/courses.html">修課</a></li>
+      <li><a href="_site/ramble.html">隨筆</a></li>
+      <li><a href="_site/project.html">Projects</a></li>
+      <li><a href="_site/vlog.html">Vlog</a></li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="image-section"></div>
     <div class="content-section">
-      <h1>About</h1>
-      <ul>
-        <li>School: NYCU, Hsinchu Taiwan</li>
-        <li>Grade: Sophomore in college</li>
-        <li>Major: Electronics and Engineering</li>
-        <li>Hometown: Yunlin, Taiwan</li>
-        <li>Description: Cat lover, foodie</li>
-      </ul>
+
+      <h1>Your Name</h1>
+      <p>Hi! I'm Hazel. Welcome to my personal site. Here you’ll find my projects, blog, and more.</p>
+      <a href="about.html">Learn more →</a>
     </div>
   </div>
 </body>
