--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
       display: flex;
       flex-direction: row;
       max-width: 900px;
+      min-height: 500px;
       width: 90%;
       background-color: #fff;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -35,7 +36,8 @@
     .image-section {
       flex: 1;
       background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
-      min-height: 300px;
+      min-height: 200px;
+      max-height: 400px;
     }
 
     .content-section {
