--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Home</title>
+  <title>About | Hazel</title>
   <style>
     * {
       box-sizing: border-box;
@@ -21,11 +21,39 @@
       height: 100vh;
     }
 
+     nav {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      display: inline;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      transition: color 0.2s ease-in-out;
+    }
+
+    nav a:hover {
+      color: #0077cc;
+    }
+    
     .container {
       display: flex;
       flex-direction: row;
-      max-width: 900px;
-      min-height: 500px;
+      max-height: 300px;
       width: 90%;
       background-color: #fff;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -36,7 +64,7 @@
     .image-section {
       flex: 1;
       background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
-      max-height: 200px;
+      min-height: 200px;
     }
 
     .content-section {
@@ -76,6 +104,15 @@
   </style>
 </head>
 <body>
+    <nav>
+    <ul>
+      <li><a href="campus.html">校園</a></li>
+      <li><a href="courses.html">修課</a></li>
+      <li><a href="ramble.html">隨筆</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="vlog.html">Vlog</a></li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="image-section"></div>
     <div class="content-section">
@@ -87,6 +124,7 @@
         <li>Hometown: Yunlin, Taiwan</li>
         <li>Description: Cat lover, foodie</li>
       </ul>
+      
     </div>
   </div>
 </body>
