--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hazel | NYCU</title>
+  <title>Hazel | NYCU EE</title>
   <style>
     * {
       box-sizing: border-box;
@@ -56,8 +56,8 @@
     .container {
       display: flex;
       flex-direction: row;
-      max-width: 900px;
-      max-height: 300px;
+      max-width: 1000px;
+      max-height: 400px;
       width: 90%;
       background-color: #a69595;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -68,8 +68,7 @@
     .image-section {
       flex: 1;
       background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/index.png') no-repeat center center/cover;
-      max-height: 200px;
-      max-width: 600px;
+      max-height: 400px;
     }
 
     .content-section {
