--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 <body>
   <nav>
     <ul>
-      <li><a href="campus.html">校園</a></li>
-      <li><a href="courses.html">修課</a></li>
-      <li><a href="ramble.html">隨筆</a></li>
-      <li><a href="project.html">Projects</a></li>
-      <li><a href="vlog.html">Vlog</a></li>
+      <li><a href="/Hazel-the-Cat/campus.html">校園</a></li>
+      <li><a href="/Hazel-the-Cat/courses.html">修課</a></li>
+      <li><a href="/Hazel-the-Cat/ramble.html">隨筆</a></li>
+      <li><a href="/Hazel-the-Cat/project.html">Projects</a></li>
+      <li><a href="/Hazel-the-Cat/vlog.html">Vlog</a></li>
     </ul>
   </nav>
   <div class="container">
