--- a/about.html
+++ b/about.html
@@ -61,11 +61,15 @@
       overflow: hidden;
     }
 
-    .image-section {
-      flex: 1;
-      background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png') no-repeat center center/cover;
-      min-height: 200px;
-    }
+.image-section {
+  flex: 1;
+  height: 300px; /* 明確指定高度 */
+  background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png')
+              no-repeat center center;
+  background-size: contain; /* 保持圖片完整，不裁切 */
+  background-color: #fff;   /* 加背景色避免透明邊界 */
+}
+
 
     .content-section {
       flex: 1;
@@ -93,30 +97,43 @@
     }
 
     @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
+  .container {
+    flex-direction: column;
+    width: 100%;
+  }
 
-      .image-section {
-        height: 200px;
-      }
-    }
+  .image-section {
+    width: 100%;
+    max-height: 200px;
+  }
+
+  .content-section {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .content-section h1 {
+    font-size: 1.8rem;
+  }
+
+  .content-section p {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
+
   </style>
 </head>
 <body>
     <nav>
     <ul>
-      <li><a href="/Hazel-the-Cat/campus.html">校園</a></li>
-      <li><a href="/Hazel-the-Cat/courses.html">修課</a></li>
-      <li><a href="/Hazel-the-Cat/ramble.html">隨筆</a></li>
-      <li><a href="/Hazel-the-Cat/project.html">Projects</a></li>
-      <li><a href="/Hazel-the-Cat/vlog.html">Vlog</a></li>
+      <li><a href="/Hazel-the-Cat/index.html">Home</a></li>
     </ul>
   </nav>
   <div class="container">
     <div class="image-section"></div>
     <div class="content-section">
-      <h1>About</h1>
+      <h1>Hazel Chen</h1>
       <ul>
         <li>School: NYCU, Hsinchu Taiwan</li>
         <li>Grade: Sophomore in college</li>
