--- a/index.html
+++ b/index.html
@@ -97,14 +97,31 @@
     }
 
     @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
+  .container {
+    flex-direction: column;
+    width: 100%;
+  }
 
-      .image-section {
-        height: 250px;
-      }
-    }
+  .image-section {
+    width: 100%;
+    height: 250px;
+  }
+
+  .content-section {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .content-section h1 {
+    font-size: 1.8rem;
+  }
+
+  .content-section p {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -122,7 +139,7 @@
     <div class="content-section">
 
       <h1>Hazel Chen</h1>
-      <p>Hi! I'm Hazel. Welcome to my personal site. Here you’ll find courses I have taken, my projects, and more.</p>
+      <p>Welcome! I'm Hazel, a student in NYCU Electronics and Engineering. I'mdocumenting my journey in engineering, actuarial science, and tech projects.</p>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
