--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       flex-direction: row;
       max-width: 1000px;
       max-height: 400px;
-      width: 90%;
+      width: 80%;
       background-color: #a69595;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       border-radius: 16px;
@@ -93,6 +93,11 @@
     }
 
     .content-section a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    .content-section a:hover {
       text-decoration: none;
       color: #0077cc;
       font-weight: bold;
@@ -147,6 +152,17 @@
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
+
+  <div class="container">
+    <div class="image-section"></div>
+    <div class="content-section">
+
+      <h1>校園</h1>
+      <p>Welcome! I'm Hazel, a student in NYCU Electronics and Engineering. I'mdocumenting my journey in engineering, actuarial science, and tech projects.</p>
+      <ul><li><a href="about.html">About me →</a></li></ul>
+    </div>
+  </div>
+
 </body>
 </html>
 
