--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="分享交大電機修課、校園、隨筆與專案。">
   <title>Hazel | 交大電機</title>
   <style>
     * {
