--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
   </style>
 </head>
 <body>
+  <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/home.gif" class="responsive-gif" />
   <nav>
     <ul>
       <li><a href="/Hazel-the-Cat/campus.html">校園</a></li>
