--- a/index.html
+++ b/index.html
@@ -19,17 +19,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      /*height: 100vh;*/
-      min-height: 100vh;
       flex-direction: column;
-
+      min-height: 100vh;
     }
 
-    header li{
-      display: inline;
-      margin-right: 20px;
-    }
-     nav {
+    nav {
       position: absolute;
       top: 20px;
       right: 30px;
@@ -39,12 +33,6 @@
       list-style: none;
       display: flex;
       gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav li {
-      display: inline;
     }
 
     nav a {
@@ -60,30 +48,32 @@
 
     .container {
       display: flex;
-      flex-direction: row;
-      /*max-height: 400px;*/
+      flex-direction: column; /* ✅ 上圖下文 */
       width: 80%;
       background-color: #a69595;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       border-radius: 16px;
       overflow: hidden;
-      margin-top: 60px;  /* ✅ 往下移 */
+      margin-top: 80px;
     }
 
     .image-section {
-      flex: 1;
-      background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/photo/index.png') no-repeat center center/cover;
-      /*max-height: 400px;*/
-      background-color: #fff; /* 加背景色避免透明邊界 */
-      background-size: contain; /* 保持圖片完整，不裁切 */
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .image-section img {
+      width: 100%;
+      height: auto;
+      max-height: 400px;
+      object-fit: contain;
     }
 
     .content-section {
-      flex: 1;
       padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      text-align: center;
     }
 
     .content-section h1 {
@@ -102,53 +92,36 @@
       color: #333;
       font-weight: bold;
     }
+
     .content-section a:hover {
-      text-decoration: none;
       color: #0077cc;
-      font-weight: bold;
     }
 
-@media (max-width: 768px) {
-      body {
-  display: flex;
-  justify-content: center;
-  min-height: 100vh; /* ✅ 可滑動 */
-  padding-top: 40px;  /* ✅ 自訂距離頂端位置 */
-  padding-bottom: 40px;
-}
+    @media (max-width: 768px) {
+      .container {
+        width: 95%;
+      }
 
-  .container {
-    flex-direction: column; /* 🔁 垂直排列：圖片上文字下 */
-    width: 100%;
-    max-height: none; /* 🧼 移除高度限制，讓內容能滑動 */
-  }
+      .image-section img {
+        max-height: 240px;
+      }
 
-  .image-section {
-    width: 100%;
-    height: none;
-    background-size: contain; /* 保持圖片完整，不裁切 */
-  }
+      .content-section {
+        padding: 20px;
+      }
 
-  .content-section {
-    padding: 20px;
-    text-align: center;
-  }
+      .content-section h1 {
+        font-size: 1.6rem;
+      }
 
-  .content-section h1 {
-    font-size: 1.6rem;
-  }
-
-  .content-section p {
-    font-size: 0.8rem;
-    line-height: 1.5;
-  }
-
-}
-
+      .content-section p {
+        font-size: 0.95rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/home.gif" class="responsive-gif" />
+ 
   <nav>
     <ul>
       <li><a href="/Hazel-the-Cat/campus.html">校園</a></li>
@@ -159,7 +132,9 @@
     </ul>
   </nav>
   <div class="container">
-    <div class="image-section"></div>
+    <div class="image-section">
+      <img src="https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/home.gif" alt="Home" />
+    </div>
     <div class="content-section">
 
       <h1>Hazel Chen</h1>
