--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="content-section">
 
       <h1>Hazel Chen</h1>
-      <p>Welcome! I'm Hazel, a student in NYCU Electronics and Engineering. I'm documenting my journey in engineering, actuarial science, and tech projects.</p>
+      <p>Hi! I'm Hazel. I'm documenting my journey in engineering, actuarial science, and tech projects.</p>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
