--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="分享交大電機修課、校園、隨筆與專案。">
-  <title>Hazel | 交大電機</title>
+  <meta name="description" content="分享交大電機修課心得、校園、追劇與期末專題。">
+  <meta name="keywords" content="交大電機, 修課心得, NYCU, 追劇, 期末專題">
+  <title>交大電機 | Hazel</title>
   <style>
     * {
       box-sizing: border-box;
