--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="分享交大電機修課心得、校園、追劇與期末專題。">
   <meta name="keywords" content="交大電機, 修課心得, NYCU, 追劇, 期末專題">
-  <title>交大電機 | Hazel</title>
+  <title>交大電機修課心得 | Hazel</title>
   <style>
     * {
       box-sizing: border-box;
@@ -125,9 +125,9 @@
  
   <nav>
     <ul>
-      <li><a href="/Hazel-the-Cat/campus.html">校園</a></li>
-      <li><a href="/Hazel-the-Cat/courses.html">修課</a></li>
-      <li><a href="/Hazel-the-Cat/ramble.html">隨筆</a></li>
+      <li><a href="/Hazel-the-Cat/courses.html">修課心得</a></li>
+      <li><a href="/Hazel-the-Cat/drama.html">追劇日常</a></li>
+      <li><a href="/Hazel-the-Cat/ramble.html">校園隨筆</a></li>
       <li><a href="/Hazel-the-Cat/project.html">Projects</a></li>
       <li><a href="/Hazel-the-Cat/vlog.html">Vlog</a></li>
     </ul>
@@ -139,7 +139,7 @@
     <div class="content-section">
 
       <h1>Hazel Chen</h1>
-      <p>Hi! I'm Hazel. I'm documenting my journey in engineering, actuarial science, and tech projects.</p>
+      <p>趁著文思如泉湧的時候來記錄在交大電機的修課心得，在看劇不甘心的時候來提筆劇情感想。</p>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
