--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="content-section">
 
       <h1>Hazel Chen</h1>
-      <p>趁著文思如泉湧的時候來記錄在交大電機的修課心得，在看劇不甘心的時候來提筆劇情感想。</p>
+      <p>趁著文思如泉湧的時候來記錄在交大電機的修課心得&追劇嗑瓜。</p>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
