--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="分享交大電機修課心得、校園、追劇與期末專題。">
-  <meta name="keywords" content="交大電機, 修課心得, NYCU, 追劇, 期末專題">
-  <title>交大電機修課心得 | Hazel</title>
+  <meta name="description" content="分享交大電機修課心得、工讀、追劇與期末專題。">
+  <meta name="keywords" content="交大電機, 修課心得, NYCU, 追劇, 工讀,陳靜萱">
+  <title>交大電機 | Hazel</title>
   <style>
     * {
       box-sizing: border-box;
@@ -97,7 +97,38 @@
     .content-section a:hover {
       color: #0077cc;
     }
+.section-title {
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+  border-left: 4px solid #0077cc;
+  padding-left: 8px;
+}
 
+.list {
+  text-align: left;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.list li {
+  margin-bottom: 8px;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+.content-section {
+  padding: 40px;
+  display: flex;          /* 讓內部可以用 flex */
+  flex-direction: column; /* 垂直排列 */
+  align-items: center;    /* 讓內容區塊本身置中 */
+}
+
+.inner-text {
+  width: 80%;             /* 控制文字寬度，不要太長 */
+  text-align: left;       /* 文字靠左 */
+}
     @media (max-width: 768px) {
       .container {
         width: 95%;
@@ -120,13 +151,13 @@
       }
     }
   </style>
+
 </head>
 <body>
  
   <nav>
     <ul>
       <li><a href="/Hazel-the-Cat/courses.html">修課心得</a></li>
-      <li><a href="/Hazel-the-Cat/drama.html">追劇日常</a></li>
       <li><a href="/Hazel-the-Cat/ramble.html">校園隨筆</a></li>
       <li><a href="/Hazel-the-Cat/project.html">Projects</a></li>
       <li><a href="/Hazel-the-Cat/vlog.html">Vlog</a></li>
@@ -138,8 +169,24 @@
     </div>
     <div class="content-section">
 
-      <h1>Hazel Chen</h1>
-      <p>趁著文思如泉湧的時候來記錄在交大電機的修課心得&追劇嗑瓜。</p>
+      <h1>陳靜萱</h1>
+      <p>陽明交大 電機工程學系 大二</p>
+<div class="inner-text">
+    <h2 class="section-title">📌 工讀經驗</h2>
+    <ul class="list">
+      <li>🎤 教學發展中心 教學發展交流會 線上主持</li>
+      <li>🎬 【影像多媒體】企劃組</li>
+      <li>📖 自習中心工讀生</li>
+      <li>🎪 Open House 春季就業博覽會 工作人員</li>
+      <li>⚖️ 科法所工讀生</li>
+      <li>🎓 畢業典禮工作人員</li>
+    </ul>
+
+    <h2 class="section-title">📌 現時動態</h2>
+    <ul class="list">
+      <li>📚 清交閱人咖啡館 -- 小聚組</li>
+      <li>🎬 【影像多媒體】企劃組</li>
+    </ul>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
   </div>
