--- a/index.html
+++ b/index.html
@@ -174,18 +174,18 @@
 <div class="inner-text">
     <h2 class="section-title">📌 工讀經驗</h2>
     <ul class="list">
-      <li>🎤 教學發展中心 教學發展交流會 線上主持</li>
-      <li>🎬 【影像多媒體】企劃組</li>
-      <li>📖 自習中心工讀生</li>
-      <li>🎪 Open House 春季就業博覽會 工作人員</li>
-      <li>⚖️ 科法所工讀生</li>
-      <li>🎓 畢業典禮工作人員</li>
+      <li>🎤 教學發展中心-教學發展交流會-線上主持</li>
+      <li>🎬 大數據中心-影像多媒體-企劃組</li>
+      <li>📖 自習中心-暑期工讀生</li>
+      <li>🎪 國際產學中心-Open House 春季就業博覽會-工作人員</li>
+      <li>⚖️ 科技法律所-工讀生</li>
+      <li>🎓 畢業典禮-工作人員</li>
     </ul>
 
     <h2 class="section-title">📌 現時動態</h2>
     <ul class="list">
-      <li>📚 清交閱人咖啡館 -- 小聚組</li>
-      <li>🎬 【影像多媒體】企劃組</li>
+      <li>📚 清交閱人咖啡館-小聚組</li>
+      <li>🎬 大數據中心-影像多媒體-企劃組</li>
     </ul>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
