--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
   <nav>
     <ul>
       <li><a href="/Hazel-the-Cat/courses.html">修課心得</a></li>
+      <li><a href="/Hazel-the-Cat/drama.html">追劇日常</a></li>
       <li><a href="/Hazel-the-Cat/ramble.html">校園隨筆</a></li>
       <li><a href="/Hazel-the-Cat/project.html">Projects</a></li>
       <li><a href="/Hazel-the-Cat/vlog.html">Vlog</a></li>
@@ -170,8 +171,13 @@
     <div class="content-section">
 
       <h1>陳靜萱</h1>
-      <p>陽明交大 電機工程學系 大二</p>
 <div class="inner-text">
+    <h2 class="section-title">📌 現時動態</h2>
+    <ul class="list">
+      <li>📚 清交閱人咖啡館-小聚組</li>
+      <li>🎬 大數據中心-影像多媒體-企劃組</li>
+      <li>☕ 星巴克 兼職夥伴</li>
+    </ul>
     <h2 class="section-title">📌 工讀經驗</h2>
     <ul class="list">
       <li>🎤 教學發展中心-教學發展交流會-線上主持</li>
@@ -180,12 +186,6 @@
       <li>🎪 國際產學中心-Open House 春季就業博覽會-工作人員</li>
       <li>⚖️ 科技法律所-工讀生</li>
       <li>🎓 畢業典禮-工作人員</li>
-    </ul>
-
-    <h2 class="section-title">📌 現時動態</h2>
-    <ul class="list">
-      <li>📚 清交閱人咖啡館-小聚組</li>
-      <li>🎬 大數據中心-影像多媒體-企劃組</li>
     </ul>
       <ul><li><a href="about.html">About me →</a></li></ul>
     </div>
