Refine personal web

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 <body>
     <nav>
     <ul>
-      <li><a href="/Hazel-the-Cat/index.html">Home</a></li>
+      <li><a href="/Hazel-the-Cat/index.html">Hazel-the-Cat</a></li>
     </ul>
   </nav>
   <div class="container">
@@ -135,11 +135,9 @@
     <div class="content-section">
       <h1>Hazel Chen</h1>
       <ul>
-        <li>School: NYCU, Hsinchu Taiwan</li>
-        <li>Grade: Sophomore in college</li>
-        <li>Major: Electronics and Engineering</li>
-        <li>Hometown: Yunlin, Taiwan</li>
-        <li>Description: Cat lover, foodie</li>
+        <li>Tel: 0918098972</li>
+        <li>G-mail: shizuki.ee13@nycu.edu.tw</li>
+        <li>Description: A cat lover and a foodie, always seeking new adventures.</li>
       </ul>
       
     </div>
