--- a/projects.html
+++ b/projects.html
@@ -19,26 +19,26 @@
     </section>
       <!-- projects -->
     <section class="articles">
-<section>
+<div>
       <div class="title"><strong>Magic Tiles</strong></div>
       <div class="result"><p>A FPGA music game inspired by *Magic Tiles*. Use Nexys4 DDR, both Verilog and Python.</p></div>
        <div class="github-link"><a href="https://github.com/Hazel-1212/Magic_Tiles.git">GitHub</a></div>
-      </section>
-<section>    
+</div>
+<div>    
         <div class="title"><p><strong>Rhythm Dodge</strong></p></div>
         <div class="result"><p>A Python music game inspired by the game, *Just shapes and beats*.Use Python and OOP concept.</p></div>
          <div class="github-link"><a href="https://github.com/haleychang0530/oop-2025-proj-rhythm-dodge.git">GitHub</a></div>
-        </section>
-<section>
+</div>
+<div>
     <div class="title"><p><strong>Square-throwing Simulation</strong></p></div>
     <div class="result"><p>A Python simulation to get expected values, and verify with probability calculation or codes.</p></div>
     <div class="github-link"><a href="https://github.com/Hazel-1212/Square_throwing_Simulation.git">GitHub</a></div>
-    </section>
-<section>
+</div>
+<div>
         <div class="title"><p><strong>Simple Routing</strong>  </p></div>
         <div class="result"><p>A C++ finding-shortest-route simulation</p></div>
         <div class="github-link"><a href="https://github.com/Hazel-1212/Simple-Routing">GitHub</a></div>
-    </section>
+</div>
 </section>
 
       <div class="btn-group">
