--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           <p><a href="projects.html">📜Projects</a></p>
       </div>
      <div >
-       <p><a href="https://hazelnut-0820.github.io/hazelnut-nycu-nthu/">🌰 Hazelnut</a></p>
+       <p><a href="https://hazelnut-0820.github.io/hazelnut-nycu-nthu/">🌰Hazelnut</a></p>
      </div>
      <div>
-          <p><a href="about.html">✨Contact Me</a></p>
+          <p><a href="about.html">✨Contact</a></p>
         </div>
       </div>
  
