--- a/about.html
+++ b/about.html
@@ -4,143 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | Hazel</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+  <link rel="stylesheet" href="style.css">
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
+<body>
+  <!-- 主要內容 -->
+    <header>
+    <a href="index.html"><nav><a href="index.html">Hazel-the-Cat</a></nav>
+</header>
 
-     nav {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav li {
-      display: inline;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      transition: color 0.2s ease-in-out;
-    }
-
-    nav a:hover {
-      color: #0077cc;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-      max-height: 300px;
-      width: 90%;
-      background-color: #fff;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      border-radius: 16px;
-      overflow: hidden;
-    }
-
-.image-section {
-  flex: 1;
-  height: 300px; /* 明確指定高度 */
-  background: url('https://raw.githubusercontent.com/Hazel-1212/Hazel-the-Cat/main/pictures/Brown%20Yellow%20Cat%20Logo.png')
-              no-repeat center center;
-  background-size: contain; /* 保持圖片完整，不裁切 */
-  background-color: #fff;   /* 加背景色避免透明邊界 */
-}
-
-
-    .content-section {
-      flex: 1;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .content-section h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    .content-section p {
-      font-size: 1.1rem;
-      margin-bottom: 20px;
-      line-height: 1.5;
-    }
-
-    .content-section a {
-      text-decoration: none;
-      color: #0077cc;
-      font-weight: bold;
-    }
-
-    @media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .image-section {
-    width: 100%;
-    max-height: 200px;
-  }
-
-  .content-section {
-    padding: 20px;
-    text-align: center;
-  }
-
-  .content-section h1 {
-    font-size: 1.8rem;
-  }
-
-  .content-section p {
-    font-size: 1rem;
-    line-height: 1.5;
-  }
-}
-
-  </style>
 </head>
 <body>
-    <nav>
-    <ul>
-      <li><a href="/Hazel-the-Cat/index.html">Hazel-the-Cat</a></li>
-    </ul>
-  </nav>
-  <div class="container">
-    <div class="image-section"></div>
-    <div class="content-section">
-      <h1>Hazel Chen</h1>
+  <hr>
+  <div class="articles">
+   <img src="pictures/Brown Yellow Cat Logo.png" alt="Yellow Cat">
+   <div><div class="title">
+    <p><strong>Hazel Chen</strong></p>
+    </div>
+    <div class="result">
       <ul>
-        <li>Tel: 0918098972</li>
-        <li>G-mail: shizuki.ee13@nycu.edu.tw</li>
-        <li>Description: A cat lover and a foodie, always seeking new adventures.</li>
+        <li>Tel: <br><a href="tel:0918098972">0918098972</a></li>
+        <li>G-mail: <br><a href="mailto:shizuki.ee13@nycu.edu.tw">shizuki.ee13@nycu.edu.tw</a></li>
+        <li>Description: <br>A cat lover and a foodie, always seeking new adventures.</li>
+        <li>Hobbies: <br>Reading, Cooking, Coffee, Watching Movies</li>
       </ul>
       
-    </div>
+    </div></div>
+    
   </div>
 </body>
 </html>
