--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,8 @@
 </section>
 
       <div class="btn-group">
-        <div >
-          <p><a href="projects.html">📜Projects</a></p>
+       <div>
+          <p><a href="resrc.html">📚Resources</a></p>
       </div>
      <div>
           <p><a href="about.html">✨Contact</a></p>
