--- a/about.html
+++ b/about.html
@@ -31,6 +31,11 @@
     </div></div>
     
   </div>
+    <!-- 頁尾 -->
+  <footer>
+    <p>&copy; 2025.09.19 陳靜萱 | Hazel. All rights reserved.</p>
+  </footer>
 </body>
+
 </html>
 
